# excalibur-tool

./: .gitignore  demo_jax_integration.py  demo_jax_performance.py  demo_jax_simple.py  profile.prof  profile_runner.prof  profile_schwarzschild.prof  pyproject.toml
_bench/: bench_flrw_fast_vs_slow.py  bench_flrw_integration_fast_vs_slow.py  profile_flrw_batch.prof  profile_flrw_batch.py
_examples/: README.md  example_field_visualizing.py  example_imports.py  example_multi_photons.py  example_opening_trajectory.py  example_usage.py
_excalibur_runs/: OPTIMAL_USAGE_GUIDE.md  README.md  README_compare_schwarzschild_vs_flrw.md  VERSION_COMPARISON.md  demo_jax_backend_quick.py  demo_quick_simulation.py  excalibur_run_compare_schwarzschild_vs_flrw.py  excalibur_run_compare_schwarzschild_vs_flrw_impact_parameter.py  excalibur_run_perturbed_flrw_jax.py  excalibur_run_schwarzschild.py  integrate_photons_FLRW_pure.py  integrate_photons_OPTIMIZED.py  integrate_photons_on_perturbed_flrw.py  integrate_photons_on_perturbed_flrw_OPTIMAL.py  integrate_photons_on_perturbed_flrw_OPTIMIZED.py  integrate_photons_on_perturbed_flrw_integrator.py  integrate_photons_on_schwarzschild.py  integrate_photons_schwarzschild_clean.py  output.txt  sitecustomize.py  test_schwarzschild_simple.py
_postprocessing/: README_time_delay.md  analyze_compare_trajectories.py  compute_redshift_map.py  compute_time_delay_map.py  plot_redshift_components.py  plot_redshift_maps_with_geometry.py  plot_redshift_statistics.py  test_redshift_plots_quick.py  visualize_trajectories.py
_tests/: README.md  (+31 more)
(+64 files in other folders)
