[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excalibur-tool"
version = "0.0.0"
description = "Excalibur lensing toolkit"
readme = "_examples/README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = { find = { where = ["."], include = ["excalibur*"] } }
